First time it displays details again after re-writing the way it gathers data from nodes.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/an-cwm.css
+++ b/html/an-cwm.css
@@ -40,6 +40,11 @@ td {
 
 .fixed_width {
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	color: #1f1f1f;
+}
+
+.fixed_width_button {
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
 }
 
 .code {
