Added the GPL header to the program. Added a logo. Cleaned up node connection detection. Split the node status and commands. Added a 'dual boot' option.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -98,6 +98,11 @@ td {
 	color: #7f7f7f;
 }
 
+.highlight_offline {
+	color: #e61667;
+	font-weight: bold;
+}
+
 .disabled_button {
 	color: #7f7f7f;
 }
