--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -46,7 +46,7 @@ td {
 	padding-top: 0px;
 	padding-bottom: 0px;
 /* 	border-spacing: 0px;  */
-	border-color: 1px solid #d1cfd3;
+	border: 1px solid #d1cfd3;
 }
 
 .legal {
