--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -24,6 +24,12 @@ td {
 	text-align: center;
 }
 
+.table_header {
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
+	color: #7f7f7f;
+}
+
 .td_hidden {
 	border: 1px solid #d1cfd3;
 	padding-left: 0px;
