--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -63,6 +63,7 @@ td {
 
 .fixed_width {
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
 	color: #1f1f1f;
 }
 
@@ -89,6 +90,10 @@ td {
 
 .highlight_ready {
 	color: #13749a;
+}
+
+.highlight_note {
+	color: #009999;
 }
 
 .highlight_ready_bold {
@@ -127,6 +132,7 @@ td {
 .subtle_text {
 	font-size: 12px;
 	color: #6D6D8D;
+	text-align: left;
 }
 
 .button {
@@ -149,6 +155,14 @@ input.disabled {
 }
 
 input {
+	border: 1px solid #8f8f8f;
+	font-size: 12px;
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	color: #1f1f1f;
+	padding: 4px;
+}
+
+select {
 	border: 1px solid #8f8f8f;
 	font-size: 12px;
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
