Fixed a bug with handling passwords with special characters. Added the first part of the code to adjust existing VMs.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -195,6 +195,7 @@ select {
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
 	color: #1f1f1f;
 	padding: 4px;
+	background-color: #ffffff;
 }
 
 /* Links */
