--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -131,7 +131,7 @@ td {
 .highlight_bad {
 	color: #9a131a;
 	font-style: italic;
-	font-weight: bold;
+	/*font-weight: bold;*/
 }
 
 .highlight_bad_bold {
