Fixed a display bug where blank physical disks are displayed when a physical drive falls out of of a logical drive. Added support for spinning down, spinning up, un/making disks as hot-swaps and other additional disk management functions.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -157,6 +157,12 @@ td {
 	font-style: italic;
 }
 
+.highlight_dangerous_bold {
+	color: #a60a0a;
+	font-style: italic;
+	font-weight: bold;
+}
+
 .highlight_unavailable {
 	color: #7f7f7f;
 }
