--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -182,6 +182,13 @@ td {
 	text-align: left;
 }
 
+.subtle_text_wrap {
+	font-size: 12px;
+	color: #6D6D8D;
+	text-align: left;
+	white-space: normal;
+}
+
 .button {
 	font-family: 'Dejavu Sans', Arial, Helvetica, Verdana, Sans-Serif;
 	font-size: 14px;
