--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -182,6 +182,13 @@ td {
 	text-align: left;
 }
 
+.subtle_text_fixed_width {
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
+	color: #6D6D8D;
+	text-align: left;
+}
+
 .subtle_text_wrap {
 	font-size: 12px;
 	color: #6D6D8D;
@@ -240,29 +247,6 @@ a:hover
 	text-decoration: none;
 /* 	font-weight: bold; */
 }
-/*a {
-	text-decoration: none;
-	color: #7613a4;
-	background: none;
-}
-a:visited {
-	color: #7613a4;
-}
-a:active {
-	color: #ff3f7f;
-}
-a:hover {
-	color: #8c629f;
-}
-a.stub {
-	color: #772233;
-}
-a.new {
-	color: #ba0000;
-}
-a.new:visited {
-	color: #a55858;
-}*/
 
 img {
 	border: none;
