Added a button to connect to the remote desktop of a just-booted server. Had to stick a hack in it to silently restart tomcat once booted because of some odd cookie issue with guac. Will fix later.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -182,6 +182,13 @@ td {
 	text-align: left;
 }
 
+.subtle_link {
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 11px;
+	color: #8D8DAD;
+	text-align: left;
+}
+
 .subtle_text_fixed_width {
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
 	font-size: 12px;
