--- a/html/an-cdb.css
+++ b/html/an-cdb.css
@@ -15,6 +15,8 @@ table {
 	background-color: white;
 	border-collapse: collapse;
 	box-shadow: 0 0 5px #888;
+	/*margin-left: 10px; 
+	margin-right: 10px;*/
 }
 
 td {
