THIS COMMIT IS BROKEN!
Ok, so not so much broken as only half-done, but I haven't checked in for quite some time.

This check-in covers all <a ...> and <img ...> based buttons being now skinable. It also has the start of the media library becoming translatable and skinnable. It's not done. No sir, not at all.

Also, there is a known issue with guacamole 0.9.2 (https://glyptodon.org/jira/browse/GUAC-789) that seems to effect us. So that's broken, too.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -222,11 +222,11 @@ td {
 	white-space: normal;
 }
 
-.button {
+/* This should be called 'bold_button' */
+.bold_button {
 	font-family: 'Dejavu Sans', Arial, Helvetica, Verdana, Sans-Serif;
 	font-size: 14px;
 	background: transparent;
-/* 	background: white; */
 	cursor: pointer;
 	color: #7f117f;
 	border: 0px;
@@ -319,6 +319,4 @@ img {
 	margin-left:5px;
 	background:url(images/tt_bottom.gif) top right no-repeat;
 	overflow:hidden;
-}den;
-};
 }
