Starting the work on sanity checking the install manifest form fields.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -164,6 +164,12 @@ td {
 	font-style: italic;
 }
 
+.highlight_bad_star {
+	color: #9a131a;
+	font-style: italic;
+	vertical-align: super;
+}
+
 .highlight_bad_bold {
 	color: #9a131a;
 	font-style: italic;
