Deleting and downloading existing install manifests completed. Began parsing (loading) install manifests.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -50,6 +50,10 @@ td {
 /* 	border-color: #ffffff; */
 }
 
+.td_hidden_white {
+	border: 1px solid #ffffff;
+}
+
 .hidden_table {
 	background-color: transparent;
 	border-collapse: collapse;
