Fixed a bug with mounting ISO images from media library that had spaces in their names. Fixed a typo in a template. Started work on having the 'striker-installer' setup the Striker dashboard as a PXE server for installing other Striker dashboards and Anvil! nodes.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -130,6 +130,12 @@ td {
 	color: #13749a;
 }
 
+.highlight_ready_fixed_width {
+	color: #13749a;
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
+}
+
 .highlight_ready_bold {
 	color: #13749a;
 	font-weight: bold;
@@ -198,6 +204,13 @@ td {
 .highlight_offline {
 	color: #3f3fcf;
 	font-weight: bold;
+}
+
+.highlight_offline_fixed_width {
+	color: #3f3fcf;
+	font-weight: bold;
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
 }
 
 .disabled_button {
