--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -244,7 +244,7 @@ td {
 	white-space: normal;
 }
 
-/* This should be called 'bold_button' */
+/* This should be called 'button_bold' */
 .bold_button {
 	font-family: 'Dejavu Sans', Arial, Helvetica, Verdana, Sans-Serif;
 	font-size: 14px;
@@ -253,6 +253,12 @@ td {
 	color: #7f117f;
 	border: 0px;
 	font-weight: bold;
+}
+
+.button_reference {
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 12px;
+	color: #af41af;
 }
 
 input.disabled {
