--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -296,7 +296,7 @@ select {
 	font-style: normal;
 	font-weight: normal;
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
-	text-align: left;
+	text-align: center;
 }
 
 /* Links */
