* Updated striker migration to check to see if a given server is set to cold migration. If so, it prompts the user to confirm and warns them that a migration involves a reboot. * Updated tools/safe_anvil_shutdown to now call tools/anvil-migrate-server. * Changed the css slightly to make offline server names look better. * Fixed a bug where the shell call to migrate a server wasn't printing to stdout in tools/anvil-migrate-server
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -205,10 +205,16 @@ td {
 }
 
 .highlight_offline_fixed_width {
-	color: #C20030;
+	color: #13749a;
 	font-weight: bold;
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
 	font-size: 12px;
+}
+
+.highlight_offline_fixed_width_button {
+	color: #13749a;
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	font-size: 14px;
 }
 
 .disabled_button {
