--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -30,6 +30,11 @@ td {
 	text-align: center;
 }
 
+.title {
+	color: #13749a;
+	font-weight: bold;
+}
+
 .table_header {
 	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
 	font-size: 12px;
@@ -85,6 +90,10 @@ td {
 	font-size: 12px;
 /* 	color: #1f1f1f; */
 	text-align: left;
+}
+
+.button {
+	padding: 5px;
 }
 
 .fixed_width_button {
