* Added two new modules; AN::Tools::Web, which will handle all methods related to displaying things to user's browsers, and AN::Tools::Validate which will contain methods used to validate user input. * Moved AN::Tools::String->read_words() over to AN::Tools::Storage and updated all references to this method to reflect the change. * Moved AN::Tools::Get->template() to the new AN::Tools::Web module. * Created AN::Tools::Web->no_db_access() to display a simple error message when there is no access to any ScanCore database. * Added a place-holder menu entry to 'configure' for managing ScanCore databases (which will later allow the user to update striker.conf's 'scancore::x::y' entries). * Re-enabled checking an ISO's med5sum in anvil-generate-iso.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -177,6 +177,7 @@ td {
 }
 
 .highlight_bad {
+	padding: 5px;
 	color: #9a131a;
 	font-style: italic;
 }
@@ -188,17 +189,20 @@ td {
 }
 
 .highlight_bad_bold {
+	padding: 5px;
 	color: #9a131a;
 	font-style: italic;
 	font-weight: bold;
 }
 
 .highlight_dangerous {
+	padding: 5px;
 	color: #FF0033;
 	font-style: italic;
 }
 
 .highlight_dangerous_bold {
+	padding: 5px;
 	color: #FF0033;
 	font-style: italic;
 	font-weight: bold;
