* Added 'html/skins/alteeve/web.html' to hold general purpose templates (will eventually phase out 'common.html'). * Added 'AN::Tools::ScanCore->get_anvils()' and 'AN::Tools::ScanCore->get_smtp()' to read in details about Anvil! systems and SMTP servers. * Cleaned up the 'configure -> anvil' menu. It's getting closer to how it will actually look now.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -128,6 +128,16 @@ td {
 	color: #1a9a13;
 }
 
+.breaker_header {
+	text-align: left;
+	color: #13749a;
+}
+
+.highlight_row_bold {
+	color: #13749a;
+	font-weight: bold;
+}
+
 .highlight_good_bold {
 	color: #1a9a13;
 	font-weight: bold;
