* Finished the new Media Library download tracker. It doesn't allow aborting downloads yet, though. It had to be reworked to call tools/anvil-download-file via System->delayed_run() because of issues with backgrounding the call.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.css
+++ b/html/skins/alteeve/common.css
@@ -147,6 +147,20 @@ td {
 	color: #3333cc;
 }
 
+.highlight_row {
+	text-align: right;
+	color: #3333cc;
+	border: 1px transparent;
+}
+
+.highlight_row_data {
+	text-align: left;
+	font-size: 12px;
+	color: #1f1f1f;
+	font-family: 'Dejavu Sans Mono', 'Courier 10 pitch', monospace, Courier;
+	border: 1px transparent;
+}
+
 .highlight_row_bold {
 	color: #13749a;
 	font-weight: bold;
